--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "create-react-app-vite",
   "version": "0.4.0",
   "license": "MIT",
-  "msw": {
-    "workerDirectory": "public"
-  },
   "lint-staged": {
     "*": "prettier --ignore-unknown --write"
   },
@@ -13,16 +10,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --run",
-    "test:ui": "vitest --ui",
-    "test:watch": "vitest",
     "lint": "eslint . -c eslint.config.mjs",
     "lint:fix": "eslint . -c eslint.config.mjs --fix",
     "typecheck": "tsc --noEmit",
     "prettier": "prettier --ignore-unknown --write .",
     "clean": "rimraf node_modules pnpm-lock.yaml dist",
     "validate": "./scripts/validate",
-    "remove:tailwind": "scripts/remove_tailwind.js",
     "prepare": "husky"
   },
   "dependencies": {
@@ -40,22 +33,17 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "@types/eslint": "^9.6.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "@vitest/ui": "^3.1.1",
     "all-contributors-cli": "^6.26.1",
     "concurrently": "^9.1.2",
     "cross-fetch": "^4.1.0",
     "eslint": "^9.29.0",
-    "eslint-config-ts-prefixer": "^3.0.2",
+    "eslint-config-ts-prefixer": "^3.0.3",
     "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -64,7 +52,6 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.1",
-    "msw": "^2.10.2",
     "postcss": "^8.5.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -74,14 +61,12 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-svgr": "^4.3.0",
-    "vitest": "^3.2.0"
+    "vite-plugin-svgr": "^4.3.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@swc/core",
       "esbuild",
-      "msw",
       "unrs-resolver"
     ]
   },
